refactor: swagger https 설정 추가